# flower-classification-neural-network-in-cpp

./: .gitignore  CMakeLists.txt
include/: activations.h  dataset.h  layer.h  network.h  utils.h
src/: activations.cpp  dataset.cpp  layer.cpp  main.cpp  network.cpp  utils.cpp
tests/: test_normalization.cpp  test_train_test_split.cpp
tests/activations/: test_relu.cpp  test_softmax.cpp
tests/dataset/: test_one_hot_encode.cpp
tests/layer/: test_backward.cpp  test_create_layer.cpp  test_forward.cpp
tests/utils/: test_dot.cpp  test_mat_vec_mul.cpp  test_scalar_mul.cpp  test_transpose.cpp  test_vec_add.cpp  test_vec_mul.cpp
